update generalize course and post course with formdata

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 #online serve
 #VUE_APP_API_URL=https://api-kms.maesagroup.co.id
 
+#staging serve
+#VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
+
 #local serve
 VUE_APP_API_URL=http://kms-api.test
