--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.6.12",
     "auth0-js": "^9.10.4",
     "axios": "^0.19.0",
+    "browser-image-compression": "^1.0.14",
     "chart.js": "^2.8.0",
     "core-js": "2.6.5",
     "echarts": "^4.2.1",
@@ -59,7 +60,7 @@
     "vue2-hammer": "^2.1.2",
     "vuedraggable": "^2.21.0",
     "vuejs-datepicker": "^1.5.4",
-    "vuesax": "jd-0001/vuesax",
+    "vuesax": "github:jd-0001/vuesax",
     "vuex": "^3.1.1",
     "xlsx": "^0.15.0"
   },
