--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 #online serve
-VUE_APP_API_URL=https://api-kms.maesagroup.co.id
+#VUE_APP_API_URL=https://api-kms.maesagroup.co.id
 
 #staging serve
-#VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
+VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
 
 #local serve
 #VUE_APP_API_URL=http://kms-api.test
