update role access

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 #online serve
-#VUE_APP_API_URL=https://api-kms.maesagroup.co.id
+VUE_APP_API_URL=https://api-kms.maesagroup.co.id
 
 #staging serve
 #VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
 
 #local serve
-VUE_APP_API_URL=http://kms-api.test
+#VUE_APP_API_URL=http://kms-api.test
 
 #test git
