update video validator and reduce error

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 #VUE_APP_API_URL=https://api-kms.maesagroup.co.id
 
 #staging serve
-#VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
+VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
 
 #local serve
-VUE_APP_API_URL=http://kms-api.test
+#VUE_APP_API_URL=http://kms-api.test
 
 #test git
