--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.6.12",
     "auth0-js": "^9.10.4",
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "browser-image-compression": "^1.0.14",
     "chart.js": "^2.8.0",
     "core-js": "2.6.5",
@@ -36,6 +37,7 @@
     "vue-chartjs": "^3.4.2",
     "vue-clipboard2": "^0.3.0",
     "vue-context": "4.0.0",
+    "vue-cryptojs": "^2.1.6",
     "vue-echarts": "^4.0.3",
     "vue-feather-icons": "^5.0.0",
     "vue-flatpickr-component": "^8.1.2",
