--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "instantsearch.css": "^7.3.1",
     "jsonwebtoken": "^8.5.1",
     "material-icons": "^0.3.1",
+    "node-sass": "^4.14.1",
     "perfect-scrollbar": "^1.4.0",
     "postcss-rtl": "^1.5.0",
     "prismjs": "^1.16.0",
@@ -72,11 +73,11 @@
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "axios-mock-adapter": "^1.17.0",
-    "node-sass": "^4.12.0",
     "purgecss": "^1.3.0",
     "sass-loader": "^7.1.0",
     "script-loader": "0.7.2",
     "tailwindcss": "^1.0.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.46.0"
   }
 }
