--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 #VUE_APP_API_URL=https://api-kms.maesagroup.co.id
 
 #staging serve
-VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
+# VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
 
 #local serve
 #VUE_APP_API_URL=http://kms-api.test
-#VUE_APP_API_URL=http://127.0.0.1:8000
+VUE_APP_API_URL=http://127.0.0.1:8000
 
 #test git
