--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "perfect-scrollbar": "^1.4.0",
     "postcss-rtl": "^1.5.0",
     "prismjs": "^1.16.0",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0",
     "vee-validate": "^2.2.8",
     "vue": "^2.7.8",
     "vue-acl": "4.0.7",
