--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "ag-grid-community": "^21.0.1",
     "ag-grid-vue": "^21.0.1",
     "algoliasearch": "^3.33.0",
-    "apexcharts": "^3.35.4",
-    "auth0-js": "^9.10.4",
+    "apexcharts": "^3.36.3",
+    "auth0-js": "^9.19.2",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "browser-image-compression": "^1.0.14",
@@ -26,7 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "material-icons": "^0.3.1",
     "moment": "^2.29.4",
-    "ng2-charts": "^4.0.1",
+    "ng2-charts": "^4.0.2",
     "node-sass": "^4.14.1",
     "perfect-scrollbar": "^1.4.0",
     "postcss-rtl": "^1.5.0",
@@ -34,7 +34,7 @@
     "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
     "vee-validate": "^2.2.8",
-    "vue": "^2.7.8",
+    "vue": "^2.7.14",
     "vue-acl": "4.0.7",
     "vue-apexcharts": "^1.3.5",
     "vue-awesome-swiper": "^3.1.3",
@@ -42,14 +42,15 @@
     "vue-chartjs": "^3.4.2",
     "vue-clipboard2": "^0.3.0",
     "vue-context": "4.0.0",
-    "vue-cryptojs": "^2.3.0",
+    "vue-cryptojs": "^2.3.1",
     "vue-echarts": "^4.0.3",
     "vue-feather-icons": "^5.0.0",
     "vue-flatpickr-component": "^8.1.2",
     "vue-form-wizard": "^0.8.4",
     "vue-fullcalendar": "^1.0.9",
-    "vue-i18n": "^8.27.2",
+    "vue-i18n": "^8.28.2",
     "vue-instantsearch": "^2.2.1",
+    "vue-pdf-embed": "^1.1.5",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-picture-input": "^2.1.6",
     "vue-prism-component": "^1.1.1",
@@ -77,11 +78,13 @@
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "axios-mock-adapter": "^1.21.1",
+    "pdfvuer": "^1.10.0",
     "purgecss": "^1.3.0",
     "sass-loader": "^7.1.0",
     "script-loader": "0.7.2",
     "tailwindcss": "^1.0.1",
-    "vue-template-compiler": "^2.7.8",
+    "vue-pdf": "^4.3.0",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^4.46.0"
   }
 }
