--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 # VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
 
 #local serve
-# VUE_APP_API_URL=http://127.0.0.1:8000
+VUE_APP_API_URL=http://127.0.0.1:8000
 
 #test git
-VUE_APP_API_URL=https://testing.maesagroup.co.id
+# VUE_APP_API_URL=https://testing.maesagroup.co.id
