add chart on dashboard

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 
 #online serve
-#VUE_APP_API_URL=https://api-kms.maesagroup.co.id
+#VUE_APP_API_URL=https://api-kms.maesagroup.co.id   //link lama sudah dimigrasi
 VUE_APP_API_URL=https://mainapi.maesagroup.co.id
 
 #staging serve
-# VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com
+# VUE_APP_API_URL=https://api-staging-kms.duatanganindonesia.com  //server mati
 
 #local serve
 # VUE_APP_API_URL=http://127.0.0.1:8000
 
 #test git
-# VUE_APP_API_URL=https://testing.maesagroup.co.id
+# VUE_APP_API_URL=https://testing.maesagroup.co.id  //tidak berfungsi
