--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "browser-image-compression": "^1.0.14",
-    "chart.js": "3.6.0",
+    "chart.js": "^3.6.0",
     "core-js": "2.6.5",
     "echarts": "^4.2.1",
     "file-saver": "2.0.1",
@@ -39,7 +39,7 @@
     "vue-apexcharts": "^1.3.5",
     "vue-awesome-swiper": "^3.1.3",
     "vue-backtotop": "^1.6.1",
-    "vue-chartjs": "^3.4.2",
+    "vue-chartjs": "^4.0.0",
     "vue-clipboard2": "^0.3.0",
     "vue-context": "4.0.0",
     "vue-cryptojs": "^2.3.1",
